--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html>
-<html lang="sp">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM2</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+    <title>COOKIES2</title>
     <script src="main.js"></script>
-    <style>
-        .grande{
-            font-size: 3em;
-            color: blue;
-            font-family: 'Oswald', sans-serif;
-        }
-        .pequeño{
-            font-size: 1em;
-            color: red;
-            font-family: sans-serif;
-        }
-    </style>
 </head>
 <body>
-    <p id="inpu_nombre" class="grande">
-        <span>Texto de prueba</span>
-    </p>
-    <p id="inpu_nombre2" class="extraGrande superGrande ">
-        <span>dos</span>
-    </p>
-</body>Cach/app.js
+    <h1>F12</h1>
+</body>
 </html>
+© 2021 GitHub, Inc.
